fix: naive fix for overflowing `<details>`

--- a/src/index.css
+++ b/src/index.css
@@ -116,6 +116,7 @@
 
 .chat-message details {
   @apply my-2 rounded-lg overflow-hidden border border-border text-sm;
+  max-width: 50em;
 }
 
 .chat-message details summary {
